--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,18 @@ name: "Jan Ouwens"
 description: "All the concerts that I went to"
 baseurl: "/concerts"
 
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
 # Build settings
 remote_theme: mmistakes/minimal-mistakes@4.20.2
 plugins:
