Adds a banner image to each post

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ defaults:
       path: ""
       type: posts
     values:
+      header:
+        image: "images/banner.png"
       layout: single
       author_profile: true
       read_time: true
