Makes texts and icons specific for concerts

--- a/_config.yml
+++ b/_config.yml
@@ -73,4 +73,11 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
+
 github: [metadata]
