--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+locale: "ie"
 title: "Concerts"
 name: "Jan Ouwens"
 description: "All the concerts that I went to"
