--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,19 @@ defaults:
       type: posts
     values:
       permalink: /:year-:month-:day/:title
-      header:
-        image: "images/banner.png"
       layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: false
+      related: false
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      header:
+        overlay_image: "images/banner.png"
       author_profile: true
       read_time: false
       comments: false
@@ -53,6 +63,10 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
+# Reading files
+include:
+  - _pages
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -61,17 +75,8 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - tags
 
 category_archive:
   type: liquid
