--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ include:
 # their entries' file path in the `include:` list.
 #
 exclude:
-  - tags
+  - ./tags
 
 category_archive:
   type: liquid
