--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ masthead_title: "tr ouwens"
 name: "Jan Ouwens"
 description: "All the concerts that I went to"
 baseurl: "/concerts"
+search: true
 
 author:
   name: "Jan Ouwens"
