--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 locale: "ie"
-title: "Concerts"
+title: "Concerts - tr ouwens"
 subtitle: "jqno.nl"
 name: "Jan Ouwens"
 description: "All the concerts that I went to"
