--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 locale: "ie"
-title: "Concerts - tr ouwens"
-subtitle: "jqno.nl"
+title: "tr ouwens"
+subtitle: "Jan Ouwens ▷ by the way, things I want to say"
 name: "Jan Ouwens"
-description: "All the concerts that I went to"
+description: "Jan Ouwens ▷ tr ouwens ▷ by the way, things I want to say ▷ all the concerts that I went to"
 baseurl: "/concerts"
 search: true
 
