--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ author:
   location: "The Netherlands"
   lastfm: "jqno"
   twitter: "jqno"
+  bluesky: "https://bsky.app/profile/jqno.bsky.social"
   mastodon: "https://mastodon.online/@jqno"
 
 twitter:
@@ -47,6 +48,9 @@ footer:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/jqno"
+    - label: "Bluesky"
+      icon: "fab fa-fw fa-bluesky"
+      url: "https://bsky.app/profile/jqno.bsky.social"
     - label: "Mastodon"
       icon: "fab fa-fw fa-mastodon"
       url: "https://mastodon.online/@jqno"
@@ -90,7 +94,7 @@ tag_archive:
   path: /tags/
 
 # Build settings
-remote_theme: mmistakes/minimal-mistakes@4.20.2
+remote_theme: mmistakes/minimal-mistakes@4.26.2
 plugins:
   - jekyll-feed
   - jekyll-include-cache
